--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,7 @@ requirements:
     - python
     - pip
     - setuptools
+    - ruamel.yaml >=0.15.10
   run:
     - python
     - ruamel.yaml >=0.15.10
