--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 
 requirements:
   host:
-    - python
+    - python >2.7
     - pip
     - setuptools
   run:
-    - python
+    - python >2.7
     - ruamel.yaml >=0.15.10
 
 test:
